--- a/lang/en/content.json
+++ b/lang/en/content.json
@@ -209,7 +209,7 @@
                 "ariaLabel": "Contact via Email"
             },
             "link": {
-                "text": "alvaromolrui@gmail.com<span class='icon' aria-hidden='true'> ↗</span>",
+                "text": "hola@amolrui.com<span class='icon' aria-hidden='true'> ↗</span>",
                 "title": "Send an email",
                 "ariaLabel": "Send an email"
             },
