--- a/lang/es/content.json
+++ b/lang/es/content.json
@@ -209,7 +209,7 @@
                 "ariaLabel": "Contacto por Correo"
             },
             "link": {
-                "text": "alvaromolrui@gmail.com<span class='icon' aria-hidden='true'> ↗</span>",
+                "text": "hola@amolrui.com<span class='icon' aria-hidden='true'> ↗</span>",
                 "title": "Enviar un correo electrónico",
                 "ariaLabel": "Enviar un correo electrónico"
             },
